remove pump api
